Fix horizontal scroll on start page

--- a/src/pages/WorkshopStart/WorkshopStart.scss
+++ b/src/pages/WorkshopStart/WorkshopStart.scss
@@ -1,26 +1,25 @@
 .requirements-list {
-  list-style: none;
-  padding: 0;
-
-  li {
+  > div {
+    width: 100%;
     display: flex;
     margin: 3rem 0;
     align-items: center;
 
     img {
       display: block;
-      width: 4rem;
+      width: 40px;
       flex-grow: 0;
       flex-shrink: 1;
       flex-basis: auto;
     }
 
     div {
+      width: 100%;
       flex-grow: 1;
-      flex-shrink: 0;
+      flex-shrink: 1;
       flex-basis: auto;
-      padding-left: 3rem;
       font-size: 1.8rem;
+      margin-left: 3rem;
     }
   }
 }
